<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:orientation="vertical"
    tools:context="com.abs.smih.educatorday.ui.AddStudentFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btnSave"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/btnClear"
            android:layout_weight="1"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
       >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:hint="@string/name"
                    android:id="@+id/etFname"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/identity"
                    android:ems="10"
                    android:id="@+id/etIdentity"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/emailhint"
                    android:ems="10"
                    android:id="@+id/etEmail"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/studentphone"
                    android:ems="10"
                    android:id="@+id/etStPhone"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/fathername"
                    android:ems="10"
                    android:id="@+id/etFather"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/fatherphone"
                    android:ems="10"
                    android:id="@+id/etFaPhone"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/mothername"
                    android:ems="10"
                    android:id="@+id/etMotherName"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/motherphone"
                    android:ems="10"
                    android:id="@+id/etMotherPhone"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/comment"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/homephone"
                    android:ems="10"
                    android:id="@+id/etHomePhone"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>
